# homeassistant-airios-component

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: lint.yml  validate.yml
custom_components/airios_ventilation/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  fan.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  switch.py
custom_components/airios_ventilation/translations/: en.json
